# BabyOS

./: .clang-format  .gitignore  .gitmodules  .mxproject  BabyOS.ioc  CMakeLists.txt  LICENSE  README.md
Examples/Test/: CMakeLists.txt  main.c
Examples/Test/bos_hal/: CMakeLists.txt  b_hal_uart.c
bos/drivers/: CMakeLists.txt  Kconfig  b_driver.h  b_drv_24cxx.c  b_drv_ads124x.c  b_drv_aht20.c  b_drv_apds9930.c  b_drv_bq769x2.c  b_drv_button.c  b_drv_ds18b20.c  b_drv_esp12f.c  b_drv_fm25cl.c  b_drv_hlw811x.c  b_drv_icm20948.c  b_drv_icm42688p.c  b_drv_ili9320.c  b_drv_ili9341.c  b_drv_key.c  b_drv_l3gd20.c  b_drv_lis3dh.c  b_drv_ltc2662iuh_12.c  b_drv_matrixkeys.c  b_drv_mcp4018.c  b_drv_mcuflash.c  b_drv_mcumac.c  b_drv_ml307r.c  b_drv_oled.c  b_drv_ov5640.c  b_drv_paj7620u2.c  b_drv_pcf8574.c  b_drv_qmc5883l.c  b_drv_qmc5883p.c  b_drv_qmi8658a.c  b_drv_rs485.c  b_drv_sd.c  b_drv_spiflash.c  b_drv_ssd1289.c  b_drv_st7789.c  b_drv_testflash.c  b_drv_tm1638.c  (+2 more)
bos/drivers/camera/: b_drv_camera.h  b_drv_ov5640.c
bos/drivers/eeprom/: b_drv_24cxx.c
bos/drivers/flash/: b_drv_24cxx.c  b_drv_flash.h  b_drv_fm25cl.c  b_drv_sd.c  b_drv_spiflash.c  b_drv_w25x.c
bos/drivers/gsensor/: b_drv_ds18b20.c  b_drv_l3gd20.c  b_drv_lis3dh.c
bos/drivers/inc/: ADS124x_regs.h  BQ769x2Header.h  HLW811x_regs.h  b_driver.h  b_driver_cmd.h  b_drv_24cxx.h  b_drv_ads124x.h  b_drv_aht20.h  b_drv_apds9930.h  b_drv_bq769x2.h  b_drv_button.h  b_drv_class_camera.h  b_drv_class_flash.h  b_drv_class_gsensor.h  b_drv_class_io.h  b_drv_class_lcd.h  b_drv_class_touch.h  b_drv_ds18b20.h  b_drv_esp12f.h  b_drv_f8l10d.h  b_drv_flash.h  b_drv_fm25cl.h  b_drv_hlw811x.h  b_drv_icm20948.h  b_drv_icm42688p.h  b_drv_ili9320.h  b_drv_ili9341.h  b_drv_io_expander.h  b_drv_key.h  b_drv_l3gd20.h  b_drv_lis3dh.h  b_drv_ltc2662iuh_12.h  b_drv_matrixkeys.h  b_drv_mcp4018.h  b_drv_mcuflash.h  b_drv_mcumac.h  b_drv_ml307r.h  b_drv_oled.h  b_drv_ov5640.h  b_drv_ov5640af.h  (+23 more)
bos/drivers/io/: b_drv_pcf8574.c
bos/drivers/io-expander/: b_drv_pcf8574.c
bos/drivers/lcd/: b_drv_ili9320.c  b_drv_ili9341.c  b_drv_lcd.h  b_drv_oled.c  b_drv_ssd1289.c
bos/drivers/lora/: b_drv_f8l10d.c  b_drv_lora.h
bos/drivers/sfud/: sfud.c
bos/drivers/src/: b_drv_f8l10d.c  b_drv_fm25cl.c  b_drv_ili9341.c  b_drv_ssd1289.c  b_drv_w25x.c  b_drv_xpt2046.c  b_f8l10d.c  b_fm25cl.c  b_ili9341.c  b_ssd1289.c  b_suart.c  b_w25x.c  b_xpt2046.c
bos/drivers/touch/: b_drv_touch.h  b_drv_xpt2046.c
bos/hal/: CMakeLists.txt  Kconfig  b_hal.c  b_hal.h  b_hal_dma.c  b_hal_eth.c  b_hal_flash.c  b_hal_gpio.c  b_hal_i2c.c  b_hal_it.c  b_hal_qspi.c  b_hal_rng.c  b_hal_sccb.c  b_hal_sdio.c  b_hal_spi.c  b_hal_uart.c  b_hal_wdt.c  b_utils.c
bos/hal/hal/: b_hal.c  b_hal_gpio.c  b_hal_i2c.c  b_hal_qspi.c  b_hal_sccb.c  b_hal_spi.c  b_hal_uart.c
bos/hal/inc/: b_hal.h  b_hal_display.h  b_hal_dma.h  b_hal_eth.h  b_hal_flash.h  b_hal_gpio.h  b_hal_i2c.h  b_hal_interrupt.h  b_hal_it.h  b_hal_qspi.h  b_hal_rng.h  b_hal_sccb.h  b_hal_sdio.h  b_hal_spi.h  b_hal_uart.h  b_hal_wdt.h
bos/hal/utils/: b_util_asyntx.c  b_util_at.c  b_util_delay.c  b_util_i2c.c  b_util_spi.c
bos/modules/: CMakeLists.txt  Kconfig  b_mod_adchub.c  b_mod_battery.c  b_mod_button.c  b_mod_error.c  b_mod_event.c  b_mod_fifo.c  b_mod_fs.c  b_mod_gui.c  b_mod_heap.c  b_mod_iap.c  b_mod_kv.c  b_mod_log.c  b_mod_lunar.c  b_mod_lwip.c  b_mod_menu.c  b_mod_modbus.c  b_mod_netif.c  b_mod_param.c  b_mod_protocol.c  b_mod_pwm.c  b_mod_qpn.c  b_mod_qrcode.c  b_mod_sda.c  b_mod_sdb.c  b_mod_sdc.c  b_mod_select.c  b_mod_shell.c  b_mod_ssl.c  b_mod_state.c  b_mod_timer.c  b_mod_trace.c  b_mod_usb.c  b_mod_utc.c  b_mod_wifi.c  b_mod_xm128.c  b_mod_ymodem.c
bos/modules/b_mod_netif/: b_mod_link.c  b_mod_trans.c
bos/modules/inc/: b_mod_adchub.h  b_mod_battery.h  b_mod_button.h  b_mod_error.h  b_mod_event.h  b_mod_fifo.h  b_mod_fs.h  b_mod_gui.h  b_mod_heap.h  b_mod_iap.h  b_mod_kv.h  b_mod_log.h  b_mod_lunar.h  b_mod_menu.h  (+23 more)
(+1764 files in other folders)
